--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "../api/index.js",
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
+      "src": "../client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "client/build"
+        "distDir": "../client/build"
       }
     }
   ],
