--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,11 @@
       "src": "/(.*)",
       "dest": "/client/$1"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
